--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -11,5 +11,7 @@ jobs:
            run: echo "GKEMHCS"
          - name:  json 
            run : echo ${{ tojson(github) }}
+         - name: print 
+           run: echo ${{ github.actor }}
                   
 
