--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -1,11 +1,8 @@
 name: secret-manager
-on:
-    push:
-       branches:
-       - main 
+on: [push]
 jobs:
      deploy:
-         runs-on: ubuntu-18.04
+         runs-on: ubuntu-latest
          steps:
          - name: echo
            run: echo "GKEMHCS"
