--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -6,7 +6,8 @@ jobs:
          steps:
          - name: echo
            run: echo "GKEMHCS"
-        
+         - name:  json 
+           run : echo ${{ toJson(github) }}
          - name: print 
            run: echo ${{ github.actor }}
                   
