--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -7,7 +7,7 @@ jobs:
          - name: echo
            run: echo "GKEMHCS"
          - name:  json 
-           run : echo ${{ toJson(github) }}
+           run : echo '${{  toJson(github ) }}'
          - name: print 
            run: echo ${{ github.actor }}
                   
