--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -10,5 +10,24 @@ jobs:
            run : echo '${{  toJson(github ) }}'
          - name: print 
            run: echo ${{ github.actor }}
+     create-secret:
+        runs-on: ubuntu-latest
+        steps:
+        - name: google-cloud-auth
+          uses: google-github-actions/auth@v1'
+          with:
+            workload_identity_provider: ${{ secrets.WIF_PROVIDER  }}
+            service_account: $ {{ secrets.WIF_SERVICE_ACCOUNT_SECRET}}
+        - name: set up google cloud sdk 
+          uses: 'google-github-actions/setup-gcloud@v1'
+          with:
+            version: '>= 363.0.0'
+            project_id: github-actions-demo-run
+            install_components: 'gsutil'
+        - name: create-secret-manager
+          run: |
+             echo "${{ github.run_id }}" | gcloud secrets versions add git-secret --datafile -
+        
+
                   
 
