--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -14,9 +14,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - name: google-cloud-auth
-          uses: google-github-actions/auth@v1'
+          uses: 'google-github-actions/auth@v1'
           with:
-            workload_identity_provider: ${{ secrets.WIF_PROVIDER  }}
+            workload_identity_provider: $ {{ secrets.WIF_PROVIDER  }}
             service_account: $ {{ secrets.WIF_SERVICE_ACCOUNT_SECRET}}
         - name: set up google cloud sdk 
           uses: 'google-github-actions/setup-gcloud@v1'
