--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -13,6 +13,8 @@ jobs:
      create-secret:
         runs-on: ubuntu-latest
         steps:
+        - name: echo run_id
+          run: echo "run_id:- $ {{ github.run_id }}"
         - name: google-cloud-auth
           uses: 'google-github-actions/auth@v1'
           with:
