--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -12,6 +12,9 @@ jobs:
            run: echo ${{ github.actor }}
      create-secret:
         runs-on: ubuntu-latest
+        permissions:
+          contents: 'read'
+          id-token: 'write'
         steps:
         - name: echo run_id
           run: echo "run_id:- $ {{ github.run_id }}"
