--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -21,8 +21,8 @@ jobs:
         - name: google-cloud-auth
           uses: 'google-github-actions/auth@v1'
           with:
-            workload_identity_provider: $ {{ secrets.WIF_PROVIDER  }}
-            service_account: $ {{ secrets.WIF_SERVICE_ACCOUNT_SECRET}}
+            workload_identity_provider: '${{ secrets.WIF_PROVIDER  }}'
+            service_account: '${{ secrets.WIF_SERVICE_ACCOUNT_SECRET}}'
         - name: set up google cloud sdk 
           uses: 'google-github-actions/setup-gcloud@v1'
           with:
