--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -31,7 +31,7 @@ jobs:
             install_components: 'gsutil'
         - name: create-secret-manager
           run: |
-             echo "${{ github.run_id }}" | gcloud secrets versions add git-secret --data-file -
+             echo ${{ github.run_id }} | gcloud secrets versions add git-secret --data-file -
         
 
                   
