--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -17,7 +17,7 @@ jobs:
           id-token: 'write'
         steps:
         - name: echo run_id
-          run: echo run_id:- $ {{ github.run_id }}
+          run:  echo ${{ github.run_id }}
         - name: google-cloud-auth
           uses: 'google-github-actions/auth@v1'
           with:
