--- a/.github/workflows/list-secrets-in-gcp.yaml
+++ b/.github/workflows/list-secrets-in-gcp.yaml
@@ -1,4 +1,4 @@
-name: secret-manager
+name: secret-manage
 on: [push]
 jobs:
      deploy:
@@ -17,7 +17,7 @@ jobs:
           id-token: 'write'
         steps:
         - name: echo run_id
-          run:  echo '  runid:- ${{ github.run_id }}'
+          run:  echo 'runid:- ${{ github.run_id }}'
         - name: google-cloud-auth
           uses: 'google-github-actions/auth@v1'
           with:
