--- a/.github/workflows/secret-environment-checker.yaml
+++ b/.github/workflows/secret-environment-checker.yaml
@@ -7,13 +7,13 @@ jobs:
       permissions:
         contents: 'read'
         id-token: 'write'
-      environment: production 
+      environment: development
       steps:
       - name: google auth 
         uses: 'google-github-actions/auth@v0'
         with:
-           workload_identity_provider: '${{ secrets.WF_PROVIDER }}'
-           service_account: '${{secrets.WF_SERVICE_ACCOUNT  }}'
+           workload_identity_provider: '${{ secrets.WF_POOL }}'
+           service_account: '${{secrets.WF_SA  }}'
       - name: set up google cloud sdk 
         uses: 'google-github-actions/setup-gcloud@v1'
         with:
