--- a/.github/workflows/print-actor.yaml
+++ b/.github/workflows/print-actor.yaml
@@ -6,4 +6,4 @@ jobs:
        runs-on: ubuntu-18.04
        steps:
        - name: print actor 
-         run: echo '${{ github.actor }}'
+         run: echo ${{ github.actor }}
