--- a/.github/workflows/env-check.yaml
+++ b/.github/workflows/env-check.yaml
@@ -11,4 +11,4 @@ jobs:
          env: 
             name: '${{ secrets.NAME }}'
             stage: '${{ secrets.STAGE }}'
-         run:  echo $name
+         run:  echo ${{ github.actor }}
