--- a/.github/workflows/secret-environment-checker.yaml
+++ b/.github/workflows/secret-environment-checker.yaml
@@ -3,10 +3,13 @@ on: push
 run-name: production-runner 
 jobs:
    secrets-list:
+      
       runs-on: ubuntu-latest
       permissions:
         contents: 'read'
         id-token: 'write'
+      outputs:
+        url: ${{steps.url-getter.outputs.url}}  
       environment: development
       steps:
       - name: google auth 
@@ -20,5 +23,16 @@ jobs:
             version: '>= 363.0.0'
             project_id: github-actions-demo-run
             install_components: 'gsutil'
-      - name: google cloud secrets list 
-        run:  gcloud secrets list
+      - name: get cloud run url 
+        id: url-getter
+        run: |
+            export url=$(gcloud run services describe github-ci-cd --region us-central1 --format "value(status.address.url)")
+            echo "url=${url}" > "$GITHUB_OUTPUT"
+      - name: print url 
+        run: echo ${{ steps.url-getter.outputs.url }}
+   print_url:
+       runs-on: ubuntu-latest
+       needs:  [secrets-list]
+       steps:
+       - name: print 
+         run: echo ${{ needs.secrets-list.outputs.url }}
